--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <div class="dashboard-container">
                <div id="piechart_div" class="grid-item">Filters</div>
                <div id="barchart_div" class="grid-item">Chart</div>
-               <div id="available_1_div" class="grid-item">Available 1</div>
-               <div id="available_2_div" class="grid-item">Available 2</div>
+               <div id="chartDiv" class="grid-item">Available 1</div>
+               <div id="chartDiv_Bonus" class="grid-item">Available 2</div>
                <div id="available_3_div" class="grid-item">Available 3</div>
                <div id="available_4_div" class="grid-item">Available 4</div>
             </div>
@@ -39,5 +39,7 @@
       </main>
       <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
       <script type="text/javascript" src="./assets/scripts/main.js"></script>
+      <script src="https://code.jscharting.com/2.9.0/jscharting.js"></script>
+      <script src="./assets/scripts/index.js"></script>
    </body>
 </html>
