--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
          </section>
 
          <section id="dashboard">
+            <div id="kpi">
+               <div id="textDiv1"></div>
+               <div id="textDiv2"></div>   
+            </div>
             <div class="dashboard-container">
                <div id="piechart_div" class="grid-item">Filters</div>
                <div id="barchart_div" class="grid-item">Chart</div>
-               <div id="chartDiv" class="grid-item">Available 1</div>
+               <div id="chartDiv" class="grid-item">Available 1</div>               
                <div id="chartDiv_Bonus" class="grid-item">Available 2</div>
                <div id="available_3_div" class="grid-item">Available 3</div>
                <div id="available_4_div" class="grid-item">Available 4</div>
